fix z-indexes

--- a/frontend/src/app/core/layout/admin-layout/admin-layout.component.scss
+++ b/frontend/src/app/core/layout/admin-layout/admin-layout.component.scss
@@ -26,7 +26,7 @@ a {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1022;
+    z-index: 999;
     transition: all 0.3s;
     background-color: #1C2331;
     padding-top: 30px;
@@ -39,7 +39,7 @@ a {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 1021;
+    z-index: 998;
     transition: all 0.3s;
 }
 
