--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -28,6 +28,8 @@
 /*$fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";*/
 
+$zindex-sticky: 998;
+
 html {
     overflow-y: scroll;
     //font-size: 67.5%; Arti: à enlever ?
